[package]
name = "spritesheet-generator"
version = "0.1.0"
authors = ["Rafael Delboni <rafadelboni@gmail.com>"]

[dependencies]
serde = "1.0.68"
serde_derive = "1.0.68"
serde_json = "1.0.22"
lazy_static = "1.0"
regex = "1.0.1"
texture_packer = "0.14.0"
image = { version = "0.19.0", default-features = true }
