[package]
name = "spritesheet-generator"
version = "0.3.2"
authors = ["Rafael Delboni <rafadelboni@gmail.com>"]
description = "A spritesheet generator library using the piston's texture_packer"
keywords = ["texture", "packer", "spritesheet", "atlas"]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/rafaeldelboni/spritesheet-generator.git"
homepage = "https://github.com/rafaeldelboni/spritesheet-generator"

[dependencies]
serde = "1.0.68"
serde_derive = "1.0.68"
serde_json = "1.0.22"
lazy_static = "1.0"
regex = "1.0.1"
texture_packer = "0.14.0"
image = { version = "0.19.0", default-features = true }
