[package]
name = "spritesheet-generator"
version = "0.5.0"
authors = ["Rafael Delboni <rafadelboni@gmail.com>"]
description = "A spritesheet generator library using the piston's texture_packer"
keywords = ["texture", "packer", "spritesheet", "atlas"]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/rafaeldelboni/spritesheet-generator.git"
homepage = "https://github.com/rafaeldelboni/spritesheet-generator"

[dependencies]
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.31"
lazy_static = "1.1"
regex = "1.0.5"
texture_packer = "0.15.0"
image = { version = "0.20.0", default-features = true }
